--- a/app.json
+++ b/app.json
@@ -4,8 +4,8 @@
   "keywords": ["Gost"],
   "env": {
     "METHOD": {
-       "description": "Encryption method, null by default(table), the following methods are supported: aes-128-cfb, aes-192-cfb, aes-256-cfb, bf-cfb, cast5-cfb, des-cfb, rc4-md5, rc4-md5-6, chacha20, salsa20, rc4, table.",
-       "value": "chacha20"
+       "description": "Encryption method, null by default(table), the following methods are supported: AEAD_CHACHA20_POLY1305, aes-128-cfb, aes-192-cfb, aes-256-cfb, bf-cfb, cast5-cfb, des-cfb, rc4-md5, rc4-md5-6, chacha20, salsa20, rc4, table.",
+       "value": "AEAD_CHACHA20_POLY1305"
      },
      "PASSWORD": {
        "description": "A password used to encrypt transfer.",
